[package]
name = "bevy_playdate"
version = "0.1.0"
edition = "2021"

[dependencies]
playdate = "*"
bevy_ecs = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_reflect"] }
bevy_app = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_reflect"] }
bevy_transform = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["libm", "alloc", "bevy-support"] }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy"]}
bevy_state = { git = "https://github.com/bevyengine/bevy", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["libm", "alloc"] }
derive_more = { version = "1.0.0", default-features = false, features = ["full"] }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher"] }
no_std_io2 = { version = "0.9.0", features = ["alloc"] }
